--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expressite",
+  "name": "nemd",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -15,5 +15,20 @@
     "serve-favicon": "^2.4.3",
     "mongoose": "^4.11.5",
     "readline": "1.3.0"
-  }
+  },
+  "description": "node express mongo docker",
+  "main": "server.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kurdi89/NEMD.git"
+  },
+  "author": "Abdul kurdi",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/kurdi89/NEMD/issues"
+  },
+  "homepage": "https://github.com/kurdi89/NEMD#readme"
 }
