--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.4.3",
     "debug": "^2.6.8",
-    "express": "^4.15.3",
+    "express": "^4.16.4",
     "express-handlebars": "3.0.0",
-    "morgan": "^1.8.2",
-    "serve-favicon": "^2.4.3",
     "mongoose": "^4.11.5",
-    "readline": "1.3.0"
+    "morgan": "^1.8.2",
+    "readline": "1.3.0",
+    "serve-favicon": "^2.4.3"
   },
   "description": "node express mongo docker",
   "main": "server.js",
